# scholarship-schemes-hackathon

./: .env.example  .gitignore  DEPLOY.md  README.md  app.yaml  explain.md  pyproject.toml  requirements-app.txt  requirements.txt
app/: main.py
data/: dummy_schemes.csv  schemes.csv
docs/: DEVELOPER_GUIDE.md  WORKSPACE_SETUP.md
notebooks/: build_rag_index.ipynb  scholarship_ingest.ipynb  setup_vector_search.ipynb
scripts/: build_test_index.py  deploy_dummy.py  download_scheme_pdfs.sh  e2e_test.py  pdf_to_schemes.py  send_email_notifications.py  smoke_test.py  test_databricks_connection.py
src/scholarship/: email_client.py  evaluation.py  llm_client.py  mlflow_tracking.py  notification_service.py  profile_matching.py  retriever.py  sarvam_client.py  user_store.py
tests/: conftest.py  test_email_client.py  test_evaluation.py  test_mlflow_tracking.py  test_notification_service.py  test_retriever.py  test_user_store.py
